enemy fights included

--- a/main.html
+++ b/main.html
@@ -48,6 +48,16 @@
     <span class="stat">Health: <strong id="enemy-health">0</strong></span>
   </div>
 
+  <div id="fight-interface" style="display: none;">
+    <div class="section-title">Fight Enemy</div>
+    <div id="monster-stats">
+      <p>Monster: <strong id="fight-enemy-name">None</strong></p>
+      <p>Health: <strong id="fight-enemy-health">0</strong></p>
+    </div>
+    <input type="text" id="spell-input" placeholder="Type your spell here" />
+    <button id="cast-spell-btn">Cast Spell</button>
+  </div>
+
   <div id="game-message">Welcome to Hogwarts! Choose your house and character to begin.</div>
 
   <script src="script.js"></script> <!-- Link to JavaScript file -->
